Cover: Prevent content cutoff when aspect ratio is set in Safari

--- a/packages/block-library/src/cover/style.scss
+++ b/packages/block-library/src/cover/style.scss
@@ -178,6 +178,18 @@
 		border: none;
 		box-shadow: none;
 	}
+
+	&.has-aspect-ratio {
+		@supports (-webkit-hyphens: none) {
+			overflow: visible;
+			min-height: fit-content !important;
+			height: auto;
+
+			.wp-block-cover__inner-container {
+				min-height: fit-content;
+			}
+		}
+	}
 }
 
 .wp-block-cover-image,
